--- a/client/package.json
+++ b/client/package.json
@@ -1,19 +1,25 @@
 {
   "name": "next-apollo",
   "version": "1.0.0",
-  "main": "index.js",
+  "private": true,
   "scripts": {
-    "dev": "next"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
   "license": "MIT",
   "dependencies": {
-    "apollo-client": "^2.1.0",
-    "apollo-link-http": "^1.3.0",
-    "graphql": "^0.11.7",
-    "next": "^4.2.0",
-    "next-apollo": "^1.0.4",
-    "react": "^16.2.0",
-    "react-apollo": "^2.0.1",
-    "react-dom": "^16.2.0"
+    "@apollo/client": "^3.7.2",
+    "@types/node": "18.11.13",
+    "@types/react": "18.0.26",
+    "@types/react-dom": "18.0.9",
+    "eslint": "8.29.0",
+    "eslint-config-next": "13.0.6",
+    "graphql": "^16.6.0",
+    "next": "13.0.6",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "typescript": "4.9.4"
   }
 }
