--- a/server/package.json
+++ b/server/package.json
@@ -2,15 +2,22 @@
   "name": "faker-graphql",
   "version": "1.0.0",
   "license": "MIT",
+  "main": "dist/index.js",
+  "type": "module",
   "scripts": {
-    "start": "node server"
+    "compile": "tsc",
+    "start": "npm run compile && node ./dist/index.js"
   },
   "dependencies": {
-    "apollo-server-express": "^1.2.0",
-    "body-parser": "^1.18.2",
-    "cors": "^2.8.4",
-    "express": "^4.16.2",
-    "faker": "^4.1.0",
-    "graphql": "^0.11.7"
+    "@apollo/server": "^4.3.0",
+    "@faker-js/faker": "^7.6.0",
+    "body-parser": "^1.20.1",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "graphql": "^16.6.0"
+  },
+  "devDependencies": {
+    "@types/node": "^18.11.14",
+    "typescript": "^4.9.4"
   }
 }
