--- a/server/package.json
+++ b/server/package.json
@@ -14,9 +14,7 @@
     "body-parser": "^1.20.1",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "graphql": "^16.6.0"
-  },
-  "devDependencies": {
+    "graphql": "^16.6.0",
     "@types/node": "^18.11.14",
     "typescript": "^4.9.4"
   }
